--- a/Css/index.css
+++ b/Css/index.css
@@ -1,32 +1,54 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #ffdd57;
+    margin: 0;
+    font-family: "Open Sans", sans-serif;
+}
+
 header {
-    height: auto; /* Usamos auto para que se ajuste al contenido */
     background-color: #397534;
 }
 
 header img {
     width: 100%;
-    height: auto; /* Mantiene proporción */
+    height: auto;
     display: block;
 }
 
+pre {
+    font-style: italic;
+    text-align: center;
+    font-weight: 400;
+    font-size: large;
+}
+
+span {
+    font-weight: bold;
+    text-decoration: underline;
+    display: block;
+    text-align: center;
+}
+
 .Contenedor {
-    width: 100%;
     display: flex;
-    flex-wrap: wrap; /* Permite que los elementos bajen si no caben */
-    gap: 20px; /* Espacio entre items */
-    margin-top: 50px;
-    box-sizing: border-box;
-    padding: 10px;
+    flex-wrap: wrap;
     justify-content: center;
+    gap: 20px;
+    width: 100%;
+    padding: 20px;
+    margin-top: 50px;
 }
 
 .item {
-    flex: 1 1 calc(25% - 40px); /* 4 items por fila menos padding y gap */
+    flex: 1 1 calc(25% - 40px); /* 4 por fila */
     max-width: calc(25% - 40px);
     min-width: 200px;
     height: auto;
-    border: solid 1px green;
-    box-sizing: border-box;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,10 +59,17 @@ header img {
     width: 100%;
     height: auto;
     padding: 0;
+    opacity: 0.5;
+    transition: transform 0.3s ease, opacity 0.3s ease;
     object-fit: cover;
 }
 
-/* Responsive para tablets */
+.item img:hover {
+    transform: scale(1.2);
+    opacity: 1;
+}
+
+/* Tablets */
 @media (max-width: 768px) {
     .item {
         flex: 1 1 calc(50% - 40px); /* 2 por fila */
@@ -48,10 +77,11 @@ header img {
     }
 }
 
-/* Responsive para móviles */
+/* Móviles */
 @media (max-width: 480px) {
     .item {
         flex: 1 1 100%; /* Uno por fila */
         max-width: 100%;
     }
 }
+
